--- a/views/partials/admin_header.hbs
+++ b/views/partials/admin_header.hbs
@@ -4,7 +4,10 @@
                 <!-- LOGO -->
                 <div class="topbar-left">
                     <div class="text-center">
-                        <a href="index.html" class="logo"><i class="icon-magnet icon-c-logo"></i><span>Ad<i class="md md-album"></i>laa</span></a>
+                        <a href="/admin/dashboard" class="logo"> 
+                            <img class="" src="/adolaa-thumb-32x32-ico.png" alt="logo">
+                            <span>Ad<i class="md md-album"></i>laa</span>
+                            </a>
                     </div>
                 </div>
 
@@ -60,30 +63,21 @@
                                 </div>
 
                                 <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                                <a href="/admin/user/profile" class="dropdown-item notify-item">
                                     <i class="md md-account-circle"></i> <span>Profile</span>
                                 </a>
 
                                 <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                                <a href="/admin/settings" class="dropdown-item notify-item">
                                     <i class="md md-settings"></i> <span>Settings</span>
                                 </a>
-
-                                <!-- item-->
-                                {{!-- <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <i class="md md-lock-open"></i> <span>Lock Screen</span>
-                                </a> --}}
-
                                 <!-- item-->
                                 <a href="/admin/logout" class="dropdown-item notify-item">
                                     <i class="md md-settings-power"></i> <span>Logout</span>
                                 </a>
-
                             </div>
                         </li>
-
                     </ul>
-
                     <ul class="list-inline menu-left mb-0">
                         <li class="float-left">
                             <button class="button-menu-mobile open-left waves-light waves-effect">
@@ -98,6 +92,5 @@
                         </li>
                     </ul>
                 </nav>
-
             </div>
             <!-- Top Bar End -->
