--- a/views/partials/admin_nav.hbs
+++ b/views/partials/admin_nav.hbs
@@ -6,7 +6,8 @@
                         <ul>
                             <li class="text-muted menu-title">Navigation</li>
                             <li >
-                                <a href="/admin/dashboard" class="waves-effect"><i class="ti-home"></i> <span> Dashboard </span></a>
+                                <a href="/admin/dashboard" class="waves-effect"><i class="ti-home"></i> <span> Dashboard </span>
+                                </a>
                             </li>
                              <li class="has_sub">
                                 <a href="javascript:void(0);" class="waves-effect"><i class="ti-menu-alt"></i> <span> Categories </span> <span class="menu-arrow"></span></a>
@@ -16,7 +17,7 @@
                                 </ul>
                             </li>
                             <li class="has_sub">
-                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-menu-alt"></i> <span> Listing Types </span> <span class="menu-arrow"></span></a>
+                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-menu"></i> <span> Listing Types </span> <span class="menu-arrow"></span></a>
                                 <ul class="list-unstyled">
                                     <li><a href="/admin/listing-types">Listing Types</a></li>
                                     <li><a href="/admin/listing-type/add">Add New Type</a></li>
@@ -31,6 +32,39 @@
                                     <li><a href="/admin/user/role/add">Add Roles</a></li>
                                     <li><a href="/admin/user/permissions">Permissions</a></li>
                                 </ul>
+                            </li>
+                            <li class="has_sub">
+                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-files"></i> <span> Pages </span> <span class="menu-arrow"></span></a>
+                                <ul class="list-unstyled">
+                                    <li><a href="/admin/pages">Pages</a></li>
+                                    <li><a href="/admin/page/add">Add New Page</a></li>
+                                </ul>
+                            </li>
+                            <li class="has_sub">
+                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-light-bulb"></i> <span> FaQs </span> <span class="menu-arrow"></span></a>
+                                <ul class="list-unstyled">
+                                    <li><a href="/admin/faqs">FaQs</a></li>
+                                    <li><a href="/admin/faq/add">Add New FaQ</a></li>
+                                </ul>
+                            </li>
+                            <li class="has_sub">
+                                <a href="javascript:void(0);" class="waves-effect"><i class="fas fa-ad"></i> <span> Ads </span> <span class="menu-arrow"></span></a>
+                                <ul class="list-unstyled">
+                                    <li><a href="/admin/ads">Ads</a></li>
+                                    <li><a href="/admin/ads/add">Add New Ads</a></li>
+                                </ul>
+                            </li>
+
+                            <li class="has_sub">
+                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-money"></i> <span> Subscriptions </span> <span class="menu-arrow"></span></a>
+                                <ul class="list-unstyled">
+                                    <li><a href="/admin/subscriptions">Subscriptions</a></li>
+                                    <li><a href="/admin/subscription/add">Add New </a></li>
+                                </ul>
+                            </li>
+                            <li class="has_sub">
+                                <a href="/admin/settings" class="waves-effect"><i class="md md-settings"></i> <span> Seetings </span></a>
+                                
                             </li>
                         </ul>
                         <div class="clearfix"></div>
