--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -12,7 +12,7 @@
                 {{/if}}
                 <form class="form-horizontal m-t-20" action="/admin/admin-login" method="post">
                     <div class="form-group-custom">
-                        <input type="text" id="user-name" name="email" required="required"/>
+                        <input type="email" id="user-name" name="email" required="required"/>
                         <label class="control-label" for="user-name">Email</label><i class="bar"></i>
                     </div>
                     <div class="form-group-custom">
