add new suscription module

--- a/views/partials/admin_nav.hbs
+++ b/views/partials/admin_nav.hbs
@@ -3,8 +3,9 @@
                 <div class="sidebar-inner slimscrollleft">
                     <!--- Divider -->
                     <div id="sidebar-menu">
+                        
                         <ul>
-                            <li class="text-muted menu-title">Navigation</li>
+                            <li class="text-muted menu-title">Navigation {{{response.route.path}}}</li>
                             <li >
                                 <a href="/admin/dashboard" class="waves-effect"><i class="ti-home"></i> <span> Dashboard </span>
                                 </a>
@@ -56,15 +57,14 @@
                             </li>
 
                             <li class="has_sub">
-                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-money"></i> <span> Subscriptions </span> <span class="menu-arrow"></span></a>
+                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-package"></i> <span> Subscriptions </span> <span class="menu-arrow"></span></a>
                                 <ul class="list-unstyled">
                                     <li><a href="/admin/subscriptions">Subscriptions</a></li>
                                     <li><a href="/admin/subscription/add">Add New </a></li>
                                 </ul>
                             </li>
                             <li class="has_sub">
-                                <a href="/admin/settings" class="waves-effect"><i class="md md-settings"></i> <span> Seetings </span></a>
-                                
+                                <a href="/admin/settings" class="waves-effect"><i class="ti-settings"></i> <span> Seetings </span></a>
                             </li>
                         </ul>
                         <div class="clearfix"></div>
