--- a/views/layouts/user.hbs
+++ b/views/layouts/user.hbs
@@ -8,7 +8,11 @@
   <link href="/user/fonts/inter/inter.css" rel="stylesheet" type="text/css">
 	<link href="/user/icons/phosphor/styles.min.css" rel="stylesheet" type="text/css">
   <link href="/user/css/all.min.css" id="stylesheet" rel="stylesheet" type="text/css">
-
+<style>
+  .full-width{
+    width: 100%;
+  }
+</style>
 </head>
 <body>
    {{> user_header}}
