cashing with apis

--- a/views/layouts/user.hbs
+++ b/views/layouts/user.hbs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="16x16" href="/adolaa-thumb-32x32-ico.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-32x32.png">
   <title>{{title}}</title>
   <link href="/user/fonts/inter/inter.css" rel="stylesheet" type="text/css">
 	<link href="/user/icons/phosphor/styles.min.css" rel="stylesheet" type="text/css">
