--- a/views/layouts/user.hbs
+++ b/views/layouts/user.hbs
@@ -8,11 +8,7 @@
   <link href="/user/fonts/inter/inter.css" rel="stylesheet" type="text/css">
 	<link href="/user/icons/phosphor/styles.min.css" rel="stylesheet" type="text/css">
   <link href="/user/css/all.min.css" id="stylesheet" rel="stylesheet" type="text/css">
-<style>
-  .full-width{
-    width: 100%;
-  }
-</style>
+  <link href="/user/css/custom.css" id="stylesheet" rel="stylesheet" type="text/css">
 </head>
 <body>
    {{> user_header}}
@@ -21,7 +17,6 @@
     {{{body}}} <!-- Main content will be injected here -->
   </div>
   {{> user_footer}}
-
   <script src="/user/js/bootstrap.bundle.min.js"></script>
   <script src="/user/js/app.js"></script>
 </body>
