--- a/views/partials/user_nav.hbs
+++ b/views/partials/user_nav.hbs
@@ -46,11 +46,10 @@
 								<span>Forms</span>
 							</a>
 							<ul class="nav-group-sub collapse" data-submenu-title="Forms">
-								<li class="nav-item"><a href="/user/new-form" class="nav-link active">Add New Form</a></li>
+								<li class="nav-item"><a href="/form/new-form" class="nav-link active">Add New Form</a></li>
+								<li class="nav-item"><a href="/form/list" class="nav-link active">Forms</a></li>
 							</ul>
 						</li>
-					
-
 					</ul>
 				</div>
 				<!-- /main navigation -->
