--- a/views/user/form_list.hbs
+++ b/views/user/form_list.hbs
@@ -1,4 +1,4 @@
 <div class="content-wrapper">
 	<div class="content" id="app"></div>
 </div>
-<script src="/public/vue/form.bundle.js"></script>
+<script src="/public/vue/formList.bundle.js"></script>
