--- a/views/layouts/web.hbs
+++ b/views/layouts/web.hbs
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class data-color-theme="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="16x16" href="/adolaa-thumb-32x32-ico.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-32x32.png">
   <title>{{title}}</title>
-  <link rel="stylesheet" href="/styles.css">
+ <link href="/user/fonts/inter/inter.css" rel="stylesheet" type="text/css">
+	<link href="/user/icons/phosphor/styles.min.css" rel="stylesheet" type="text/css">
+  <link href="/user/css/all.min.css" id="stylesheet" rel="stylesheet" type="text/css">
+  <link href="/user/css/custom.css" id="stylesheet" rel="stylesheet" type="text/css">
 </head>
 <body>
-  {{!-- {{> header}} <!-- Include the header partial --> --}}
-  
-  <main>
+  <body>
+   {{> user_login_header}}
+  <div class="page-content p-0">
     {{{body}}} <!-- Main content will be injected here -->
-  </main>
-  
-  {{!-- {{> footer}} <!-- Include the footer partial --> --}}
+  </div>
+  {{!-- {{> user_footer}} --}}
+  <script src="/user/js/bootstrap.bundle.min.js"></script>
+  <script src="/user/js/app.js"></script>
 </body>
 </html>
