--- a/views/partials/user_header.hbs
+++ b/views/partials/user_header.hbs
@@ -153,7 +153,7 @@
 							<i class="ph-gear me-2"></i>
 							Account settings
 						</a>
-						<a href="#" class="dropdown-item">
+						<a href="/user/logout" class="dropdown-item">
 							<i class="ph-sign-out me-2"></i>
 							Logout
 						</a>
